<resources>
    <string name="app_name">n3ssioSport</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Empresa</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Nosotros</string>
    <string name="title_activity_nuevo">nuevo</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="preservation_prompt3">Regiones</string>

    <string-array name="opciones">
        <item>Azuay: Cuenca</item>
        <item>Bolívar: Guaranda</item>
        <item>Cañar: Azogues</item>
        <item>Carchi: Tulcán</item>
        <item>Chimborazo: Riobamba</item>
        <item>Cotopaxi: Latacunga</item>
        <item>El Oro: Machala</item>
        <item>Esmeraldas: Esmeraldas</item>
        <item>Galápagos: Puerto Baquerizo Moreno</item>
        <item>Guayas: Guayaquil</item>
        <item>Imbabura: Ibarra</item>
        <item>Loja: Loja</item>
        <item>Los Ríos: Babahoyo</item>
        <item>Manabí: Portoviejo</item>
        <item>Morona Santiago: Macas</item>
        <item>Napo: Tena</item>
        <item>Orellana: Francisco de Orellana</item>
        <item>Pastaza: Puyo</item>
        <item>Pichincha: Quito</item>
        <item>Santa Elena: Santa Elena</item>
        <item>Santo Domingo de los Tsáchilas: Santo Domingo</item>
        <item>Sucumbíos: Nueva Loja</item>
        <item>Tungurahua: Ambato</item>
        <item>Zamora Chinchipe: Zamora</item>
    </string-array>
    <string name="title_activity_linea_hogar">LineaHogar</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_lineahogare">lineahogare</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_lineahogar">lineahogar</string>
    <string name="title_activity_lihogar">lihogar</string>
    <string name="title_activity_litrabajo">litrabajo</string>

    <!-- Datos Rueda de Configuracion  -->
    <string name="txt_id">Codigo de producto</string>
    <string name="txt_nombre">Descripcion del producto</string>
    <string name="txt_precio">Precio del producto</string>
    <string name="bt_ingresar">Registrar Producto</string>
    <string name="bt_buscar">Buscar Producto</string>
    <string name="bt_modificar">Modificar Producto</string>
    <string name="bt_eliminar">Eliminar Producto</string>
    <string name="salir">Salir</string>

</resources>