<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_slideshow">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.shoeselectro.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.example.shoeselectro.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.example.shoeselectro.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />

    <activity
        android:id="@+id/lihogar"
        android:name="com.example.shoeselectro.lihogar"
        android:label="activity_lihogar"
        tools:layout="@layout/activity_lihogar" />
    <activity
        android:id="@+id/litrabajo"
        android:name="com.example.shoeselectro.litrabajo"
        android:label="activity_litrabajo"
        tools:layout="@layout/activity_litrabajo" />
    <activity
        android:id="@+id/lisOficina"
        android:name="com.example.shoeselectro.lisOficina"
        android:label="activity_lis_oficina"
        tools:layout="@layout/activity_lis_oficina" />
    <activity
        android:id="@+id/liescolar"
        android:name="com.example.shoeselectro.liescolar"
        android:label="activity_liescolar"
        tools:layout="@layout/activity_liescolar" />
    <activity
        android:id="@+id/kit"
        android:name="com.example.shoeselectro.kit"
        android:label="activity_kit"
        tools:layout="@layout/activity_kit" />

</navigation>